--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,13 @@
-version: '3'
 services:
-  chrome-remote-desktop:
-    image: epicmineryoutube/chrome-remote-desktop-epicminer
-    environment:
-      - CODE=4/0AanRRrto8KJLguWst4bUbfzH9JtnB1q2N8MSuWjgNrqZAtpj0JQXc_MgaE3y1Vcdb1DMIw
-      - PIN=912286
-      - HOSTNAME=KING-QUEEN66
+  - type: web
+    name: chrome-remote-desktop
+    runtime: docker
+    env: docker
+    plan: free # or "starter", "standard", etc., depending on your needs
+    envVars:
+      - key: CODE
+        value: "4/0AanRRrto8KJLguWst4bUbfzH9JtnB1q2N8MSuWjgNrqZAtpj0JQXc_MgaE3y1Vcdb1DMIw"
+      - key: PIN
+        value: "912286"
+      - key: HOSTNAME
+        value: "KING-QUEEN66"
